# pdf-bulk-filler-version-2

./: .gitignore  AGENTS.md  README.md  pyproject.toml
assets/data/: MAO File_sample.xlsx  sample_contacts.csv  sample_contacts.xlsx
src/pdf_bulk_filler/: __init__.py  main.py
src/pdf_bulk_filler/data/: loader.py
src/pdf_bulk_filler/mapping/: manager.py  rules.py
src/pdf_bulk_filler/pdf/: engine.py
src/pdf_bulk_filler/ui/: main_window.py  rule_editor.py  workers.py
tests/: test_cli.py  test_data_loader.py  test_mapping_manager.py  test_mapping_rules.py  test_pdf_engine.py
