[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-bulk-filler"
version = "0.1.0"
description = "Templated bulk PDF form filler."
readme = "README.md"
authors = [
  {name = "DQP Inc"}
]
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.2",
  "openpyxl>=3.1",
  "PySide6>=6.6",
  "pymupdf>=1.24",
  "pypdf2>=3.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
pdf-bulk-filler = "pdf_bulk_filler.main:main"

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
